@startuml

title __GREEDY's Class Diagram__\n

  package sase.sase.evaluation {
    package sase.sase.evaluation.nfa {
      package sase.sase.evaluation.nfa.lazy {
        package sase.sase.evaluation.nfa.lazy.order {
          package sase.sase.evaluation.nfa.lazy.order.algorithm {
            package sase.sase.evaluation.nfa.lazy.order.algorithm.sase.adaptive.greedy {
              class GreedyAdaptiveOrderingAlgorithm {
                  + calculateEvaluationOrder()
                  - isInvariantBasedAdaptationEnabled()
                  # selectNextEventType()
                  - selectFirstEventType()
                  - getTightestInvariant()
                  - testAndCreateEventTypeInvariant()
              }
            }
          }
        }
      }
    }
  }
  

  package sase.sase.evaluation {
    package sase.sase.evaluation.nfa {
      package sase.sase.evaluation.nfa.lazy {
        package sase.sase.evaluation.nfa.lazy.order {
          package sase.sase.evaluation.nfa.lazy.order.algorithm {
            package sase.sase.evaluation.nfa.lazy.order.algorithm.sase.adaptive.greedy {
              class GreedyInvariantCalculator {
                  - prefixCardinality : double
                  + GreedyInvariantCalculator()
                  + calculateInvariantValue()
              }
            }
          }
        }
      }
    }
  }
  

  package sase.sase.evaluation {
    package sase.sase.evaluation.nfa {
      package sase.sase.evaluation.nfa.lazy {
        package sase.sase.evaluation.nfa.lazy.order {
          package sase.sase.evaluation.nfa.lazy.order.algorithm {
            package sase.sase.evaluation.nfa.lazy.order.algorithm.sase.adaptive.greedy {
              class GreedyInvariantInput {
                  + eventType : EventType
                  + condition : CNFCondition
                  + GreedyInvariantInput()
              }
            }
          }
        }
      }
    }
  }
  

  GreedyAdaptiveOrderingAlgorithm -up-|> IOrderingAlgorithm
  GreedyInvariantCalculator -up-|> IInvariantCalculator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
